--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,12 @@
 header{
     background-color: blue;
     width: 100%;
+    height: 50%;
+    color: white;
+    font-family: sans-serif, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: bolder;
+    padding-left: 5px;
     display: flex;
+    align-items: center;
 }
