change: testing css

--- a/src/app/foot/foot.component.css
+++ b/src/app/foot/foot.component.css
@@ -4,5 +4,7 @@ footer{
     justify-content: center;
     align-items: center;
     color: white;
-    
+    font-family: sans-serif;
+    font-weight: bold;
+
 }
