fix: fixing css style in header, app and foot components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-header></app-header>
-<app-foot></app-foot>
+<div class="container">
+    <app-header></app-header>
+    <div class="content">
+      <!-- seu conteúdo principal -->
+    </div>
+    <app-foot></app-foot>
+  </div>
+  
