--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 header{
     background-color: blue;
-    height: 10%;
+    height: 50px;
     color: white;
     font-family: sans-serif, Helvetica, sans-serif;
     font-size: large;
