--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,10 @@
-div{
-    background-color: green;
-    width: 100%;
-    height: 15%;
-}
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  
+  .content {
+    flex-grow: 1;
+  }
+  
