change: adding semantic html and adding login route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
 <div class="container">
-    <app-header></app-header>
-    <div class="content">
-      <!-- seu conteúdo principal -->
-    </div>
-    <app-foot></app-foot>
+    <header>
+      <app-header></app-header>
+    </header>
+  
+    <main class="content">
+      <!-- Conteúdo principal da página -->
+    </main>
+  
+    <footer>
+      <app-foot></app-foot>
+    </footer>
   </div>
   
