feat: adding login component style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </header>
   
     <main class="content">
-      <!-- Conteúdo principal da página -->
+       <app-login></app-login>
     </main>
   
     <footer>
