--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="login-container">
+    <h1>Login</h1>
+    <form action="">
+        <input type="email" placeholder="Email"/>
+        <input type="password" placeholder="password"/>
+        <button>Login</button>
+    </form>
+</div>
