feat: adding register css style and testing responsivity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </header>
   
     <main class="content">
-       <app-login></app-login>
+       <app-register></app-register>
     </main>
   
     <footer>
