--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,9 @@
-<p>register works!</p>
+<div class="register-container">
+    <h1>Register</h1>
+    <form action="">
+        <input type="text" placeholder="Name"/>
+        <input type="email" placeholder="Email"/>
+        <input type="password" placeholder="Password"/>
+        <button>Register</button>
+    </form>
+</div>
