feat: adding user-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </header>
   
     <main class="content">
-       <app-home></app-home>
+       <app-register></app-register>
     </main>
   
     <footer>
