feat: add user and task service files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </header>
   
     <main class="content">
-       <app-user-list></app-user-list>
+       <app-register></app-register>
     </main>
   
     <footer>
