--- a/src/app/task-modal/task-modal.component.html
+++ b/src/app/task-modal/task-modal.component.html
@@ -1,1 +1,47 @@
-<p>task-modal works!</p>
+<div class="modal-overlay" *ngIf="isModalOpen" (click)="closeModal()">
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <h2>{{ isEditMode ? 'Edit Task' : 'New Task' }}</h2>
+      <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="taskTitle">Title</label>
+          <input
+            type="text"
+            id="taskTitle"
+            formControlName="title"
+            placeholder="Title"
+          />
+          <div *ngIf="taskForm.get('title')?.invalid && taskForm.get('title')?.touched" class="error-message">
+            Title required
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <label for="taskExpirationDate">Expiration Date</label>
+          <input
+            type="date"
+            id="taskExpirationDate"
+            formControlName="expirationDate"
+          />
+          <div *ngIf="taskForm.get('expirationDate')?.invalid && taskForm.get('expirationDate')?.touched" class="error-message">
+            Expiration Date is Required.
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <label for="taskDescription">Description</label>
+          <textarea
+            id="taskDescription"
+            formControlName="description"
+            placeholder="Digite a descrição"
+          ></textarea>
+        </div>
+  
+        <div class="form-actions">
+          <button type="button" (click)="closeModal()">Cancel</button>
+          <button type="submit" [disabled]="taskForm.invalid">
+            {{ isEditMode ? 'Update' : 'Create Task' }}
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
