--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,9 @@
 <div class="register-container">
     <h1>Register</h1>
-    <form action="">
-        <input type="text" placeholder="Name"/>
-        <input type="email" placeholder="Email"/>
-        <input type="password" placeholder="Password"/>
+    <form  [formGroup]="userForm" (ngSubmit)="onSubmit()">
+        <input type="text" formControlName="name" placeholder="Name"/>
+        <input type="email" formControlName="email" placeholder="Email"/>
+        <input type="password" formControlName="password" placeholder="Password"/>
         <button>Register</button>
     </form>
 </div>
