--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,3 +1,7 @@
-<div class="user-list-container">
-    <a href="#">User Name</a>
+<div *ngIf="loading$ | async" class="spinner">
+    <p>Loading...</p>
+</div>
+
+<div class="user-list-container" *ngFor="let user of user$ | async">
+    <a href="#">{{ user.name }}</a>
 </div>
